# CsvNormalizer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_mvp.py  run_test.py
.streamlit/: config.toml
app/: main.py
configs/: app_settings.yaml
configs/profiles/: minimal_email.yaml  uni.yaml
core/dedup/: engine.py
core/io/: reader.py  writer.py
core/logging/: formatter.py  sink.py
core/pipeline/: registry.py  runner.py
core/row_filters/: engine.py
core/rules/: birthdate.py  email.py  ip.py  lengths.py  names.py  phone.py
examples/: out_log.txt
